Product module done

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,9 @@
+server.port=8000
 #logging configurations
-logging.file.name=billing.log
-logging.file.path=/opt/applications/logs/billing/
+logging.file.name=/opt/applications/logs/billing/billing.log
 logging.file.max-size = 10MB
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/billing
+spring.datasource.username=satheesh
+spring.datasource.password=Billing#8000
