--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,7 +1,8 @@
-server.port=8080
+server.port=8000
 #logging configurations
 logging.file.name=/opt/applications/logs/billing/billing.log
 logging.file.max-size = 10MB
+logging.file.max-history = 10
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/billing
